--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,6 @@
     <title>Testing</title>
 </head>
 <body>
-    <h1>Adding Apis</h1>
-    <p>Testing</p>
+    <h1>Adding Api endpoints</h1>
 </body>
 </html>
